# netcdf3

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  codecov.yml  rustfmt.toml
data/: empty_vars.nc  scalar_vars.nc  temp_3D_64bit_offset.nc  temp_3D_classic.nc
data/copy_to_tmp_file/: Cargo.toml
data/copy_to_tmp_file/src/: lib.rs
examples/: read_file.rs
pyscripts/: create_test_data_files.py  create_test_nc3_files.py
src/: data_set.rs  data_type.rs  data_vector.rs  error.rs  io.rs  lib.rs  name_string.rs  typed_data_vector.rs  version.rs
src/data_set/: attribute.rs  dimension.rs  tests.rs  variable.rs
src/data_set/tests/: tests_dimension.rs  tests_variable.rs
src/data_vector/: tests.rs
src/error/: input_error.rs  parse_error.rs  parse_header_error.rs  read_error.rs
src/io/: file_reader.rs  file_writer.rs  tests.rs
src/io/file_reader/: tests.rs  tests_file_reader.rs
src/io/file_writer/: tests_file_writer.rs
src/typed_data_vector/: tests.rs
tests/: common.rs  test_read_nc3_files.rs  tests_read.rs  tests_read_nc3_files.rs  tests_write_nc3_files.rs
