[package]
name = "netcdf3"
version = "0.2.0"
authors = ["Julien BONTE <julien.bonte@protonmail.com>"]
edition = "2018"

description = "A pure Rust library for reading and writing NetCDF-3 files"
license = "MIT"
repository = "https://github.com/julienbonte/netcdf3"
keywords = ["netcdf"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
nom = "5.1.1"

[dev-dependencies]
copy_to_tmp_file = {path = "./data/copy_to_tmp_file"}

[badges]
travis-ci = { repository = "julienbonte/netcdf3" }
maintenance = { status = "experimental" }
