[package]
name = "netcdf3"
version = "0.3.1"
authors = ["Julien BONTE"]
edition = "2018"

description = "A pure Rust library for reading and writing NetCDF-3 files"
documentation = "https://docs.rs/netcdf3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/julienbonte/netcdf3"
keywords = ["netcdf"]
readme = "README.md"

[badges]
travis-ci = { repository = "julienbonte/netcdf3" }
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1.3.4"
nom = "5.1.1"

[dev-dependencies]
copy_to_tmp_file = {path = "./data/copy_to_tmp_file"}
tempdir = "0.3.7" 
clap = "2.33.0"
