[package]
name = "netcdf3"
version = "0.5.1"
authors = ["Julien BONTE"]
edition = "2018"

description = "A pure Rust library for reading and writing NetCDF-3 files"
documentation = "https://docs.rs/netcdf3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/julienbonte/netcdf3"
keywords = ["netcdf"]
readme = "README.md"

[badges]
travis-ci = { repository = "julienbonte/netcdf3" }
maintenance = { status = "experimental" }

[features]
ndimarray = ["ndarray"]

[dependencies]
byteorder = "1.3.4"
nom = "6.0.1"
ndarray = {version = "0.14.0", optional = true }


[dev-dependencies]
tempdir = "0.3.7"
copy_to_tmp_file = {path = "./data/copy_to_tmp_file"}
